--- a/messaging_app/Jenkinsfile
+++ b/messaging_app/Jenkinsfile
@@ -1,22 +1,18 @@
 pipeline {
     agent any
 
-    tools {
-        python 'Python 3'  // Requires ShiningPanda plugin config
-    }
-
     stages {
-        stage('Checkout') {
+        stage('Checkout Code') {
             steps {
-                git credentialsId: 'github-credentials', url: 'https://github.com/YOUR_USERNAME/alx-backend-python.git', branch: 'main'
+                git branch: 'main', credentialsId: 'github-credentials', url: 'https://github.com/monim-es/alx-backend-python.git'
             }
         }
 
-        stage('Install dependencies') {
+        stage('Install Dependencies') {
             steps {
                 sh '''
                     cd messaging_app
-                    pip install -r requirements.txt
+                    pip3 install -r requirements.txt
                 '''
             }
         }
