--- a/messaging_app/messaging_app/Jenkinsfile
+++ b/messaging_app/messaging_app/Jenkinsfile
@@ -10,19 +10,13 @@ pipeline {
 
         stage('Install Dependencies') {
             steps {
-                sh '''
-                    cd messaging_app
-                    pip3 install -r requirements.txt
-                '''
+                sh 'pip3 install -r messaging_app/requirements.txt'
             }
         }
 
         stage('Run Tests') {
             steps {
-                sh '''
-                    cd messaging_app
-                    pytest --junitxml=report.xml
-                '''
+                sh 'pytest --junitxml=messaging_app/report.xml'
             }
         }
     }
